added a bunch of files

--- a/indexFrancais.html
+++ b/indexFrancais.html
@@ -29,15 +29,15 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">Work Experience</a></li>
-            <li><a href="#about">School</a></li>
-            <li><a href="#about">Projects</a></li>
-            <li><a href="#contact">Personal Interests</a></li>
-            <li><a href="#contact">Contact me</a></li>
+            <li class="active"><a href="#">Accueil</a></li>
+            <li><a href="#about">Experience professionelle</a></li>
+            <li><a href="#about">Scolarité</a></li>
+            <li><a href="#about">Projets Personnels</a></li>
+            <li><a href="#contact">Interests personnel</a></li>
+            <li><a href="#contact">Me contacter</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="./indexFrancais.html"><b>English</b> | Français</a></li>
+            <li><a href="index.html">English| <b>Francais</b> </a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
