work experience and contact info added

--- a/index.html
+++ b/index.html
@@ -29,30 +29,29 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">Work Experience</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="work.html">Work Experience</a></li>
             <li><a href="#about">School</a></li>
             <li><a href="#about">Projects</a></li>
             <li><a href="#contact">Personal Interests</a></li>
-            <li><a href="#contact">Contact me</a></li>
+            <li><a href="contact.html">Contact me</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="./indexFrancais.html"><b>English</b> | Français</a></li>
+            <li><a href="#about"><b>English</b> | Français</a></li>
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>
       </div>
     </div>
 
     <div class="container">
 
       <!-- Main component for a primary marketing message or call to action -->
-      <div class="jumbotron">
-        <h1>Navbar example</h1>
-        <p>This example is a quick exercise to illustrate how the default, static and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
-        <p>To see the difference between static and fixed top navbars, just scroll.</p>
-        <p>
-          <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
-        </p>
+      <div class="container">
+        <div class="page-header">
+          <h1>Hey, I'm Vincent Coste</h1>
+        </div>
+        <p class="lead"> I am soon to graduate computer engineer interested in software develpoment.
+        
       </div>
 
     </div> <!-- /container -->
