--- a/indexFrancais.html
+++ b/indexFrancais.html
@@ -29,7 +29,7 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Accueil</a></li>
+            <li class="active"><a href="indexFrancais.html">Accueil</a></li>
             <li><a href="#about">Experience professionelle</a></li>
             <li><a href="#about">Scolarité</a></li>
             <li><a href="#about">Projets Personnels</a></li>
@@ -37,7 +37,7 @@
             <li><a href="#contact">Me contacter</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="index.html">English| <b>Francais</b> </a></li>
+            <li><a href="index.html">English| <b>Français</b> </a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
