--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="work.html">Work Experience</a></li>
-            <li><a href="#about">School</a></li>
+            <li><a href="education.html">Education</a></li>
             <li><a href="#about">Projects</a></li>
             <li><a href="#contact">Personal Interests</a></li>
             <li><a href="contact.html">Contact me</a></li>
