--- a/work.html
+++ b/work.html
@@ -31,7 +31,7 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
             <li class="active"><a>Work Experience</a></li>
-            <li><a href="#about">School</a></li>
+            <li><a href="education.html">Education</a></li>
             <li><a href="#about">Projects</a></li>
             <li><a href="#contact">Personal Interests</a></li>
             <li><a href="contact.html">Contact me</a></li>
@@ -72,7 +72,7 @@
         <div class="page-header">
           <h1><b>Xtreme Labs Inc.</b> - Agile Mobile Developer</h1>
         </div>
-        <p class="lead">September 2012 – December 2012 & May 2013 - August 2013, <b>Toronto, ON, Canada </b></p>
+        <p class="lead">September 2012 – December 2012</br>May 2013 - August 2013, <b>Toronto, ON, Canada </b></p>
          <!-- <p>Actively participated in the development process of new prototypes in several different projects in a fast pace agile team</p> -->
         <ul>
           <li>Strongly contributed to the development of mobile apps in a fast paced work environment</li>
