--- a/education.html
+++ b/education.html
@@ -37,7 +37,7 @@
             <li><a href="contact.html">Contact me</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="./indexFrancais.html"><b>English</b> | Français</a></li>
+            <li><a href=""><b>English</b> | Français</a></li>
           </ul>
         </div>
       </div>
