--- a/index.html
+++ b/index.html
@@ -48,10 +48,30 @@
       <!-- Main component for a primary marketing message or call to action -->
       <div class="container">
         <div class="page-header">
-          <h1>Hey, I'm Vincent Coste</h1>
+          <h1>Vincent Coste</h1>
         </div>
-        <p class="lead"> I am soon to graduate computer engineer interested in software develpoment.
-        
+        <p class="lead"> I am a fourth year Computer Engineering student expecting to graduate in May 2015 with a Bachelor of Applied Science in Computer Engineering from the University of Waterloo. </br>
+        I am a highly motivated hands-on full-stack software developper. I have had the chance to be part of several internships/co-op placements in a variety of tech companies accross North America.</br>
+        Through Outstanding and Excellent evaluations I have shown my ability to learn fast and take on new tasks when working on large projects in fast paced environments.</p>
+
+        <div class="page-header">
+          <h1>Qualifications</h1>
+        </div>
+        <p class="lead">&#8226; Well-rounded full-stack software developer.</p>
+        <p class="lead">&#8226; Experienced in native mobile applications developement.</p>
+        <p class="lead">&#8226; Strong back-end server development.</p>
+        <p class="lead">&#8226; Working knowledge in front-end web development.</p>
+        <p class="lead">&#8226; Excellent verbal and written communication skills; fluent in French and Spanish.</p>
+
+        <div class="page-header">
+          <h1>Technical Proficiency</h1>
+        </div>
+        <p class="lead">&#8226; iOS (Objective-C, Cocoa, UIKit framework), Android (Java)</p>
+        <p class="lead">&#8226; C, C++, C#, Java, MySQL</p>
+        <p class="lead">&#8226; Python, Ruby, Node.js</p>
+        <p class="lead">&#8226; Javascript, jQuery, HTML5/CSS, Ajax, JSON, XML</p>
+        <p class="lead">&#8226; Git, Jenkins, Xcode, Eclipse</p>
+
       </div>
 
     </div> <!-- /container -->
