--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
             <li class="active"><a>Contact me</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="./indexFrancais.html"><b>English</b> | Français</a></li>
+            <li><a href=""><b>English</b> | Français</a></li>
           </ul>
         </div>
       </div>
@@ -51,13 +51,16 @@
         <div class="page-header">
           <h1>Vincent Coste</h1>
         </div>
-        <p class="lead">The best way to get in touch with me at the moment is to send me an <b>email</b> or to add me on <b>LinkIn</b>. I am currently living in Seattle, WA but this is not my permanent address. Here is my most to date contact info:</p>
+        <p class="lead">The best way to contact me at the moment is to send me an <b>email</b> or to add me on <b>LinkIn</b>. </br>I am currently living in Seattle, WA doing an internship. </br>Here is my most up-to-  date contact info:</p>
 
         <div class="page-header">
           <p class="lead">Email &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="mailto:me@vincentcoste.me">me@vincentcoste.me</a></p>
         </div>
         <div class="page-header">
           <p class="lead">Phone &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(206) 349-3383</p>
+        </div>
+         <div class="page-header">
+          <p class="lead">LinkedIn &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="www.linkedin.com/pub/vincent-coste/31/8b3/129/">Vincent Coste</a></p>
         </div>
         <!-- <div class="page-header">
           <p class="lead">LinkedIn </p>
