--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,8 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="work.html">Work Experience</a></li>
             <li><a href="education.html">Education</a></li>
-            <li><a href="#about">Projects</a></li>
-            <li><a href="#contact">Personal Interests</a></li>
+            <li><a href="">Projects</a></li>
+            <li><a href="">Personal Interests</a></li>
             <li class="active"><a>Contact me</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -60,7 +60,7 @@
           <p class="lead">Phone &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(206) 349-3383</p>
         </div>
          <div class="page-header">
-          <p class="lead">LinkedIn &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="www.linkedin.com/pub/vincent-coste/31/8b3/129/">Vincent Coste</a></p>
+          <p class="lead">LinkedIn &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.linkedin.com/pub/vincent-coste/31/8b3/129/">Vincent Coste</a></p>
         </div>
         <!-- <div class="page-header">
           <p class="lead">LinkedIn </p>
