--- a/work.html
+++ b/work.html
@@ -32,8 +32,8 @@
             <li><a href="index.html">Home</a></li>
             <li class="active"><a>Work Experience</a></li>
             <li><a href="education.html">Education</a></li>
-            <li><a href="#about">Projects</a></li>
-            <li><a href="#contact">Personal Interests</a></li>
+            <li><a href="">Projects</a></li>
+            <li><a href="">Personal Interests</a></li>
             <li><a href="contact.html">Contact me</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
