--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="work.html">Work Experience</a></li>
             <li><a href="education.html">Education</a></li>
-            <li><a href="">Projects</a></li>
-            <li><a href="">Personal Interests</a></li>
+            <!-- <li><a href="">Projects</a></li>
+            <li><a href="">Personal Interests</a></li> -->
             <li><a href="contact.html">Contact me</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#about"><b>English</b> | Français</a></li>
+            <!-- <li><a href="#about"><b>English</b> | Français</a></li> -->
           </ul>
         </div>
       </div>
