--- a/404.html
+++ b/404.html
@@ -48,7 +48,7 @@
       <!-- Main component for a primary marketing message or call to action -->
       <div class="container">
         <div class="page-header">
-          <h1>This part of the website is not unavailable</br>
+          <h1>This page is not unavailable yet</br>
           Cette page n'est pas encore fini</h1>
         </div>
 
