--- a/index.html
+++ b/index.html
@@ -50,9 +50,19 @@
         <div class="page-header">
           <h1>Vincent Coste</h1>
         </div>
-        <p class="lead"> I am a fourth year Computer Engineering student expecting to graduate in May 2015 with a Bachelor of Applied Science in Computer Engineering from the University of Waterloo. </br>
-        I am a highly motivated hands-on full-stack software developper. I have had the chance to be part of several internships/co-op placements in a variety of tech companies accross North America.</br>
-        Through Outstanding and Excellent evaluations I have shown my ability to learn fast and take on new tasks when working on large projects in fast paced environments.</p>
+        <div class="row">
+          <div class="col-md-8">
+            <p class="lead"> I am a fourth year Computer Engineering student expecting to graduate in May 2015 with a Bachelor of Applied Science in Computer Engineering from the University of Waterloo. </br>
+            I am a highly motivated hands-on full-stack software developper. I have had the chance to be part of several internships/co-op placements in a variety of tech companies accross North America.</br>
+            Through Outstanding and Excellent evaluations I have shown my ability to learn fast and take on new tasks when working on large projects in fast paced environments.</p>
+          </div>
+
+          <div class="col-md-4">
+            <img src="me2.jpg" style="width:300px;height:450px">
+          </div>
+        </div>
+        
+        
 
         <div class="page-header">
           <h1>Qualifications</h1>
