--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
         <div class="page-header">
           <h1>Vincent Coste</h1>
         </div>
-        <p class="lead">The best way to contact me at the moment is to send me an <b>email</b> or to add me on <b>LinkIn</b>. </br>I am currently living in Seattle, WA doing an internship. </br>Here is my most up-to-  date contact info:</p>
+        <p class="lead">The best way to contact me at the moment is to send me an <b>email</b> or to add me on <b>LinkedIn</b>. </br>I am currently living in Seattle, WA doing an internship. </br>Here is my most up-to-date contact info:</p>
 
         <div class="page-header">
           <p class="lead">Email &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="mailto:me@vincentcoste.me">me@vincentcoste.me</a></p>
