--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="row">
           <div class="col-md-8">
-            <p class="lead"> I am a fourth year Computer Engineering student expecting to graduate in May 2015 with a Bachelor of Applied Science in Computer Engineering from the University of Waterloo. </br>
+            <p class="lead"> I am a fourth year Computer Engineering student expecting to graduate in May 2015 with a Bachelor of Applied Science in Computer Engineering from the University of Waterloo in Canada. </br>
             I am a highly motivated hands-on full-stack software developper. I have had the chance to be part of several internships/co-op placements in a variety of tech companies accross North America.</br>
             Through Outstanding and Excellent evaluations I have shown my ability to learn fast and take on new tasks when working on large projects in fast paced environments.</p>
           </div>
