--- a/contact.html
+++ b/contact.html
@@ -58,8 +58,10 @@
           <p class="lead"><i class="fa fa-envelope-o"></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="mailto:me@vincentcoste.me">me@vincentcoste.me</a></p>
         </div>
         <div class="page-header">
+          <p class="lead"><i class="fa fa-github"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://github.com/vcoste">vcoste</a></p>
+        </div>
+        <div class="page-header">
           <p class="lead"><a href="http://www.linkedin.com/pub/vincent-coste/31/8b3/129/"><i class="fa fa-linkedin-square"></i></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.linkedin.com/pub/vincent-coste/31/8b3/129/">Vincent Coste</a></p>
-          
         </div>
         <div class="page-header">
           <p class="lead"><i class="fa fa-phone"></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+1-206-349-3383</p>
