typos fixed and resume updated

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <h1>Qualifications</h1>
         </div>
         <p class="lead">&#8226; Well-rounded full-stack software developer.</p>
-        <p class="lead">&#8226; Experienced in native mobile applications developement.</p>
+        <p class="lead">&#8226; Experienced in native mobile applications development.</p>
         <p class="lead">&#8226; Strong back-end server development.</p>
         <p class="lead">&#8226; Working knowledge in front-end web development.</p>
         <p class="lead">&#8226; Excellent verbal and written communication skills; fluent in French and Spanish.</p>
