--- a/work.html
+++ b/work.html
@@ -62,13 +62,13 @@
         <p class="lead">&#8226; Contributed in the software development process of several short-cycle projects in a fast pace agile team.</p>
         <p class="lead">&#8226; Developed web applications using: Javascript/HTML5/CSS3, Node.js, Python, PHP, Jenkins (Continuous Integration), Test Driven Development (TDD).</p>
         <p class="lead">&#8226; Demonstrated strong ability to pick up new technologies and components from different projects in order to execute and deliver quality work.</p> 
-        <p class="lead">&#8226; Immediatly contributed to the assigned projects through a hands-on full-stack development experience.</p>
+        <p class="lead">&#8226; Immediately contributed to the assigned projects through a hands-on full-stack development experience.</p>
 
         <div class="page-header">
           <h1>Xtreme Labs Inc. - Agile Mobile Engineer</h1>
         </div>
         <p class="lead">September 2012 – December 2012</br>May 2013 - August 2013, <b>Toronto, ON, Canada </b></p>
-        <p class="lead">&#8226; Strongly contributed to the development of mobile aplications in a fast paced work environment.</p>
+        <p class="lead">&#8226; Strongly contributed to the development of mobile applications in a fast paced work environment.</p>
         <p class="lead">&#8226; Gained experience working on every stage of large iOS projects using objective-C, Xcode, and Git.</p>
         <p class="lead">&#8226; Applied Agile software development practices and principles to produce top class mobile applications.</p>
         <p class="lead">&#8226; Demonstrated great learning ability and excellent communications skills to solve new challenging problems individually or while pair programming.</p>
@@ -80,7 +80,7 @@
         <p class="lead">&#8226; Actively participated in the development process of an interactive web application for BlackBerry OS7.</p>
         <p class="lead">&#8226; Quickly adapted to technologies such as: Javascript, HTML5, CSS3, MySQL, and XML based web service.</p>
         <p class="lead">&#8226; Demonstrated a strong ability to learn new concepts in order to tackle new tasks.</p>
-        <p class="lead">&#8226; Successfully understood the big picture of a long term project within the company.</p>
+        <p class="lead">&#8226; Successfully understood the big picture of a long-term project within the company.</p>
       </div>
 
     </div> <!-- /container -->
