--- a/contact.html
+++ b/contact.html
@@ -65,6 +65,7 @@
         </div>
         <div class="page-header">
           <p class="lead"><i class="fa fa-phone"></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+1-206-349-3383</p>
+          <!-- <p class="lead">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+1-226-749-1744 (Currently not in service)</p> -->
         </div>
          
         
