--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </div>
 
           <div class="col-md-4">
-            <img src="me2.jpg" style="width:300px;height:450px">
+            <img src="me3.png" style="width:310px;height:310px">
           </div>
         </div>
         
