photo changed again

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </div>
 
           <div class="col-md-4">
-            <img src="me3.png" style="width:310px;height:310px">
+            <img src="Untitled 3.png" style="width:310px;height:310px">
           </div>
         </div>
         
