--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
         <div class="page-header">
           <h1>Vincent Coste</h1>
         </div>
-        <p class="lead">The best way to contact me at the moment is to send me an <b>email</b> or to add me on <b>LinkedIn</b>. </br>I am currently living in Seattle, WA doing an internship. </br>Here is my most up-to-date contact info:</p>
+        <p class="lead">The best way to contact me at the moment is to send me an <b>email</b> or to add me on <b>LinkedIn</b>. </br>I am currently living in San Francisco, CA working at Hearsay Social. </br>Here is my most up-to-date contact info:</p>
 
         <div class="page-header">
           <p class="lead"><i class="fa fa-envelope-o"></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="mailto:me@vincentcoste.me">me@vincentcoste.me</a></p>
@@ -64,7 +64,7 @@
           <p class="lead"><a href="http://www.linkedin.com/pub/vincent-coste/31/8b3/129/"><i class="fa fa-linkedin-square"></i></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.linkedin.com/pub/vincent-coste/31/8b3/129/">Vincent Coste</a></p>
         </div>
         <div class="page-header">
-          <p class="lead"><i class="fa fa-phone"></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+1-206-349-3383</p>
+          <p class="lead"><i class="fa fa-phone"></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+1 (415) 690-9397</p>
           <!-- <p class="lead">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+1-226-749-1744 (Currently not in service)</p> -->
         </div>
          
