--- a/education.html
+++ b/education.html
@@ -50,8 +50,8 @@
         <div class="page-header">
           <h1>University of Waterloo - Computer Engineering</h1>
         </div>
-        <h3>Candidate for Bachelor of Applied Science<br/> Honours Co-operative Program</h3>
-        <p class="lead">Expected Graduation: May 2015</p>
+        <h3>Bachelor of Applied Science<br/> Honours Co-operative Program</h3>
+        <p class="lead">Graduated in May 2015</p>
         <hr>
         <h3>Relevant Courses Completed:</h3>
         
