--- a/work.html
+++ b/work.html
@@ -50,7 +50,7 @@
         <div class="page-header">
           <h1>Appnique - Software Development Engineering</h1>
         </div>
-        <p class="lead">September 2014 – Present, <b>Redmond, WA, USA </b></p>
+        <p class="lead">September 2014 – December 2014, <b>Redmond, WA, USA </b></p>
          <p class="lead">Currently developing back-end services in Ruby in order to improve App Store Optimization results.</p>
         
 
